--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,8 @@ board_upload.maximum_size = 16777216
 board_build.partitions = default_16MB.csv
 board_build.extra_flags = 
 	-DBOARD_HAS_PSRAM
-	
-lib_deps = lvgl/lvgl@^9.4.0
-		https://github.com/collin80/can_common@0.4.0
-		https://github.com/collin80/esp32_can@0.3.1
+lib_deps = 
+    lvgl/lvgl@9.4.0
+    https://github.com/collin80/can_common.git#8585f9dc807ebbeedeb509d74159f40f538d2d65
+    https://github.com/collin80/esp32_can.git#6d835ae82d46748e8267b350680c851a46b38eea
+
